# melody-tab

./: README.md  pyproject.toml  run.sh  setup.sh
src/melody_tab/: __init__.py  __main__.py  audio.py  cli.py  download.py  melody.py  models.py  notes.py  output.py  tab.py  tab_parse.py  tab_to_midi.py  transcribe.py  utils.py
tests/: test_cli_smoke.py  test_melody.py  test_notes.py  test_output_layout.py  test_pipeline_debug.py  test_tab.py  test_tab_parse.py
