[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "melody-tab"
version = "0.1.0"
description = "Local-first CLI: YouTube/audio melody extraction to MIDI, notes, and simple guitar TAB"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "melody-tab contributors" }]
dependencies = [
  "yt-dlp>=2025.1.0",
  "basic-pitch>=0.4.0",
  "pretty-midi>=0.2.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
melody-tab = "melody_tab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
